--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 	<head>
-		<title> Arcane Knowledge </title>
+		<title> Minimal Quest </title>
 
 		<!-- Css -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
